# ansible-role-tailscale

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  molecule.yml  pull_request.yml  pull_request_target.yml  release.yml  security.yml  semgrep.yml  supply_chain.yml
defaults/: main.yml
filter_plugins/: warn.py
handlers/: main.yml
meta/: main.yml
molecule/537/: converge.yml  molecule.yml  prepare.yml
molecule/args/: cleanup.yml  converge.yml  molecule.yml
molecule/default/: cleanup.yml  converge.yml  headscale.config.yaml  init_tailscale_vars.yml  molecule.yml  prepare.yml  verify.yml
molecule/idempotent-up/: converge.yml  molecule.yml  verify.yml
molecule/oauth/: converge.yml  init_tailscale_vars.yml  molecule.yml  prepare.yml
molecule/reinstall/: converge.yml  molecule.yml
molecule/skip-authentication/: converge.yml  molecule.yml  verify.yml
molecule/state/: converge.yml  molecule.yml
molecule/state-absent/: converge.yml  molecule.yml  verify.yml
molecule/state-absent-purge/: converge.yml  molecule.yml  verify.yml
molecule/state-idempotency/: cleanup.yml  converge.yml  molecule.yml
molecule/state-present/: converge.yml  molecule.yml  verify.yml
molecule/strategy-free/: cleanup.yml  converge.yml  molecule.yml  verify.yml
molecule/vars-priority/: cleanup.yml  converge.yml  molecule.yml  verify.yml
tasks/: arch.yml  centos.yml  debian.yml  facts.yml  fedora.yml  install.yml  main.yml  systemd.yml  uninstall.yml  windows.yml
tasks/arch/: install.yml  uninstall.yml
tasks/centos/: install-legacy.yml  install.yml  uninstall-legacy.yml  uninstall.yml
vars/: main.yml
(+15 files in other folders)
