[tool.poetry]
name = "artis3n.tailscale"
version = "4.1.0"
description = "Ansible role to install and enable a Tailscale node."
authors = ["Artis3n <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.3.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.0", markers = "platform_system != 'Windows'" }
molecule = "^24.2.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
pre-commit = "^3.6.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
