[tool.poetry]
name = "artis3n.tailscale"
version = "4.5.0"
description = "Ansible role to install and enable a Tailscale node."
authors = ["Artis3n <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.10.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.7.0", markers = "platform_system != 'Windows'" }
molecule = "^24.9.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
pre-commit = "^4.0.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
